--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "build": "webpack"
-    },
+    "build": "webpack"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "webpack": "^4.19.1"
   },
   "devDependencies": {
+    "css-loader": "^0.28.10",
+    "style-loader": "^0.20.2",
     "webpack-cli": "^2.0.9"
   }
 }
