--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,10 @@
       "browser": true,
       "jquery": true
     },
-    "rules": {
-        "semi": 1,
-        "indent": ["warn", 2]
-    }
+  "rules": {
+      "semi": 1,
+      "indent": ["warn", 2],
+      "no-console": "warn",
+      "no-debugger": "warn"
+  }
 }
